<resources>
    <string name="app_name">IMDb</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="usuario">Usuario</string>
    <string name="apple_logo">apple_logo</string>
    <string name="facebook_logo">facebook_logo</string>
    <string name="google_logo">google_logo</string>

    //Login activity
    <string name="user">Usuario</string>
    <string name="option">O puedes ingresar con:</string>
    <string name="question">¿No tienes cuenta?</string>
    <string name="register">Regístrate</string>
    <string name="guest">Continuar como invitado</string>
    <string name="login">Login</string>


    //Registration activity
    <string name="create_account">Crear una cuenta</string>
    <string name="name">Nombre</string>
    <string name="email">Correo electrónico</string>
    <string name="hintEmail">pepitoperez@gmail.com</string>
    <string name="hintName">Pepito Pérez</string>
    <string name="password">Contraseña</string>
    <string name="advice_password">La contraseña debe contener 8 caracteres</string>
    <string name="accept_button">Aceptar</string>

    //Gallery activity
    <string name="search">Buscar IMDb</string>
</resources>