<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/imdb_color"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/logo_imdb"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/txt_usuario"
        app:srcCompat="@drawable/imdb_logo"
        tools:layout_editor_absoluteX="120dp" />

    <TextView
        android:id="@+id/txt_usuario"
        android:text="@string/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/logo_imdb"
        android:layout_marginStart="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/gray_title"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="20sp"
        android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:hintTextColor="@color/gray_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"/>

        </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/password"
        android:textColor="@color/gray_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_user" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:helperText="@string/advice_password"

            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/gray_title"
            android:hint="@string/password"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tie_passwordRegistration"
                android:inputType="textPassword"
                android:background="@drawable/rounded_corners"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/login"
            android:backgroundTint="@color/colorPrimary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/option"
            android:textSize="18sp"
            android:textColor="@color/gray_title"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

        <ImageView
        android:id="@+id/apple_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/apple_logo"
        android:src="@drawable/apple_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/facebook_logo"
        tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/facebook_logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/facebook_logo"
            android:src="@drawable/facebook_logo"

            app:layout_constraintEnd_toStartOf="@+id/google_logo"
            app:layout_constraintStart_toEndOf="@+id/apple_logo"
            tools:ignore="MissingConstraints" />

        <ImageView
        android:id="@+id/google_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/google_logo"
        android:src="@drawable/google_logo"

        app:layout_constraintStart_toEndOf="@+id/facebook_logo"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/question"
                android:textColor="@color/gray_title"
                android:textSize="18sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/txt_register"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_guest"
            android:text="@string/guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"

            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

</LinearLayout>
</ScrollView>